--- a/.env
+++ b/.env
@@ -19,3 +19,10 @@ APP_SECRET=272cb3b974605286e3e9627c7a741f0a
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://enzoc@127.0.0.1:3306/db_my_cv
+###< doctrine/doctrine-bundle ###
