--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,19 @@
 #index:
 #    path: /
 #    defaults: { _controller: 'App\Controller\DefaultController::index' }
+
+app_lucky_number:
+    path: /lucky/number
+    controller: App\Controller\LuckyController::number
+    
+form_formation:
+    path: /formation/create
+    controller: App\Controller\LuckyController::formation
+    
+form_experience:
+    path: /experience/create
+    controller: App\Controller\LuckyController::experience
+    
+form_loisirs:
+    path: /loisirs/create
+    controller: App\Controller\LuckyController::loisirs
