--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ APP_SECRET=272cb3b974605286e3e9627c7a741f0a
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://enzoc@127.0.0.1:3306/db_my_cv
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
