--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,22 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    
+    encoders:
+        Symfony\Component\Security\Core\User\User:
+            algorithm: bcrypt
+            cost: 12
+        
     providers:
-        in_memory: { memory: ~ }
+        in_memory: 
+            memory:
+                users:
+                    admin:
+                        password: $2y$12$7L0EPNALAQLlwA5IT5YKVuAG7I/a1UKWoU.ULvF2pY.gFnUhzASiW
+                        roles: 'ROLE_ADMIN'
+                    bob:
+                        password: boby
+                        roles: 'ROLE_USER'
+                        
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -9,9 +24,6 @@ security:
         main:
             anonymous: true
             http_basic: ~
-        
-        
-            
 
             # activate different ways to authenticate
 
@@ -24,5 +36,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
