--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -20,3 +20,7 @@ form_experience:
 form_loisir:
     path: /loisir/create
     controller: App\Controller\LoisirController::create
+    
+admin:
+    path: /admin
+    controller: App\Controller\LuckyController::admin
